@@ -1,3 +1,8 @@
+2009-11-06  Jerry DeLisle  <jvdelisle@gcc.gnu.org>
+
+	PR fortran/41909
+	* gfortran.dg/recursive_check_15.f90: New test.
+
 2009-11-06  Jakub Jelinek  <jakub@redhat.com>
 
 	PR c++/41967
